# erpnext

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
erpnext_open_banking/: __init__.py  hooks.py  modules.txt
erpnext_open_banking/erpnext_open_banking/: __init__.py
erpnext_open_banking/erpnext_open_banking/config/: __init__.py  docs.py
erpnext_open_banking/erpnext_open_banking/doctype/open_banking_connection/: open_banking_connection.json  open_banking_connection.py
erpnext_open_banking/erpnext_open_banking/doctype/open_banking_settings/: open_banking_settings.js  open_banking_settings.json  open_banking_settings.py
erpnext_open_banking/erpnext_open_banking/doctype/open_banking_sync_log/: open_banking_sync_log.json  open_banking_sync_log.py
erpnext_open_banking/erpnext_open_banking/utils/: __init__.py  client.py  connector.py  envelope.py  mapper.py
erpnext_open_banking/public/js/: bank_account.js
tests/: test_client.py  test_envelope.py  test_mapper.py
